--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex">
   <title>anaboribu</title>
-  <link rel="stylesheet" href="stylesheet.css">
+  <link rel="stylesheet" href="resource/stylesheet.css">
 </head>
 
 <body>
