--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="robots" content="noindex">
   <title>anaboribu</title>
   <link rel="stylesheet" href="resource/stylesheet.css">
-  <link rel="icon" type="image/x-icon" href="resource/favicon.ico"
+  <link rel="icon" type="image/x-icon" href="resource/favicon.ico">
 </head>
 
 <body>
